# sam3

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
examples/: SEGMENTATION.ipynb  Segment_Cells_sam3_video_predictor_example.ipynb  TEST_sam3_for_sam2_video_task_example.ipynb  saco_gold_silver_eval_example.ipynb  sam3_for_sam1_task_example.ipynb  sam3_image_interactive.ipynb  sam3_image_predictor_example.ipynb
sam3/: visualization_utils.py
sam3/model/: edt.py  io_utils.py
sam3/train/transforms/: basic_for_api.py
scripts/: batch_run.py  run_inference.py
